make container-4 background and round border. don't fix container-2 alignment issue

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ a {
 }
 
 .container-1 {
-    background: #1f2937;
+    background: #1F2937;
     display: flex;
     justify-content: space-around;
     padding: 6%
@@ -46,7 +46,7 @@ a {
 }
 
 .text {
-    color: #e5e7eb;
+    color: #E5E7EB;
     font-size: 18px;
 }
 
@@ -68,18 +68,57 @@ button {
 .container-2 {
     padding: 100px;
     display: flex;
-    justify-content: center;
+    
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;*/
 }
 
 .images {
     width: 20ch;
-    display: flex;
-    flex-direction: column;
-    padding: 5%
+    /*display: flex;
+    flex-wrap: wrap;
+    /* flex-direction: column;
+    /*padding: 2%*/
 }
 
 img {
     padding: 70px;
     border: #3882f6 solid 5px;
     border-radius: 22px;
+}
+
+.random {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: bolder;
+   /* display: flex;
+    /*flex-direction: column;*/
+}
+
+.container-3 {
+    background: #E5E7EB;
+    display: flex;
+    padding: 120px;
+    justify-content: space-around;
+}
+
+.quote {
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+    font-weight: lighter;
+    width: 800px;
+}
+
+.credit {
+    display: flex;
+    font-size: 20px;
+}
+
+.container-4 {
+    background: #3882f6;
+    margin: 100px 400px;
+    border-radius: 20px;
+
 }
